Setting up base file and template file for etcd filters

--- a/OPA-Testing/opaAuthz.yaml
+++ b/OPA-Testing/opaAuthz.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
   name: fs-opa
+  namespace: default
 spec:
   action: CUSTOM
   provider:
@@ -10,3 +12,4 @@ spec:
   - to:
     - operation:
         methods: ["GET"]
+        notHosts: ["ext*"]
