Missing a placeholder for container name

--- a/OPA-Testing/fake-service-template.yaml
+++ b/OPA-Testing/fake-service-template.yaml
@@ -34,7 +34,7 @@ spec:
       terminationGracePeriodSeconds: 0
       serviceAccountName: # Modify this line with the service name
       containers:
-      - name: # Modify this line with the service name
+      - name: {name} # Modify this line with the service name
         image: nicholasjackson/fake-service:v0.24.2
         imagePullPolicy: IfNotPresent
         env:
